# agentinit

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  lychee.toml  pyproject.toml
.cursor/rules/: project.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  links.yml  markdown.yml  publish.yml
agentinit/: __init__.py  __main__.py  _add.py  _doctor.py  _llms.py  _parser.py  _profiles.py  _project_detect.py  _project_updates.py  _scaffold.py  _status.py  _sync.py  cli.py  contextlint_adapter.py
agentinit/_contextlint/: __init__.py  __main__.py  checks.py  cli.py
agentinit/template/: .contextlintrc.json  AGENTS.md  CLAUDE.md  GEMINI.md  llms.txt
agentinit/template/.claude/rules/: coding-style.md  repo-map.md  testing.md
agentinit/template/.cursor/rules/: project.mdc
agentinit/template/.github/: copilot-instructions.md
agentinit/template/add/: security.md  soul.md
agentinit/template/add/mcp/: github.md  postgres.md
agentinit/template/add/skills/code-reviewer/: SKILL.md
agentinit/template/add/skills/frontend-reviewer/: SKILL.md
agentinit/template/add/skills/testing/: SKILL.md
agentinit/template/docs/: CONVENTIONS.md  DECISIONS.md  PROJECT.md  STATE.md  TODO.md
agentinit/template/minimal/: AGENTS.md  CLAUDE.md  llms.txt
agentinit/template/skeletons/fastapi/: main.py  pyproject.toml
agentinit/template/skeletons/fastapi/tests/: conftest.py  test_todos.py
cli/: agentinit.py
docs/: CONVENTIONS.md  DECISIONS.md  PROJECT.md  TODO.md
template/: GEMINI.md
template/.cursor/rules/: project.mdc
template/.github/: copilot-instructions.md
template/docs/: DECISIONS.md
tests/: helpers.py  test_cli.py  test_cli_lint_add.py  test_cli_project_commands.py  test_cli_scaffold.py  test_cli_status_detect.py
wiki/: Architecture.md  Commands.md  Contributing.md  FAQ.md  Home.md  Quick-Start.md  Troubleshooting.md  Workflows.md  _Sidebar.md
