[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agentinit"
version = "0.3.0"
description = "Scaffold agent context files into a project."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "llm", "claude", "cursor", "copilot", "cli", "scaffolding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

[project.scripts]
agentinit = "agentinit.cli:main"

[tool.setuptools.packages.find]
include = ["agentinit", "agentinit.*"]

[tool.setuptools.package-data]
agentinit = [
    "template/**/*",
    "template/*",
    "template/.*",
    "template/.cursor/rules/*",
    "template/.github/*",
    "template/.claude/rules/*",
    "template/.contextlintrc.json",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
